# python-setuptools-template

./: .editorconfig  setup.cfg
