[metadata]
name = mypackage
author = Anand Balakrishnan
version = attr:mypackage.__version__
description = Template for Python setuptools projects
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
packages = find:
python_requires = >= 3.5, <= 3.8
install_requires =
  requests

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
max-line-length = 88
ignore = E501, E203, W503
per-file-ignores = __init__.py:F401
exclude =
    .git
    __pycache__
    build
    dist
    releases
    .venv
    .tox
    .mypy_cache
    .pytest_cache

[mypy]
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[pylint]
max-line-length = 88

[pylint.messages_control]
disable = C0330, C0326
